--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "email-js": "^2.0.3",
+    "emailjs-com": "^3.2.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
